# microsocks11

./: .appveyor.yml  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  main.cpp  sblist.cpp  sblist_delete.cpp  server.cpp  socks5.cpp  sockssrv.cpp
include/: CMakeLists.txt  sblist.h  server.h  sockets.h  socks5.h
